--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,11 +1,15 @@
 [default]
 hq_url = tests/mock_plugin/mock_plugin.py
 request_handler_class = tests/app/MainHandler
-http_req_wildcard_fields = query, otherfield
+http_req_wildcard_fields = query,otherfield
+paths = hq_url,request_handler_class
+tuples = http_req_wildcard_fields
 
 [test_dir_a]
 request_handler_class = tests/mock_plugin/another_plugin/AnotherHandler
 hq_url = tests/mock_plugin/temp_hq.py
+paths = request_handler_class,hq_url
 
 [test_dir_b]
 hq_url = tests/mock_plugin/another_plugin.py
+paths = hq_url
