Move config handling to a separate file and small fixups

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,15 +1,16 @@
 [default]
-hq_url = tests/mock_plugin/mock_plugin.py
+hq_url = http://somedomain.com
 request_handler_class = tests/app/MainHandler
-http_req_wildcard_fields = query,otherfield
-paths = hq_url,request_handler_class
+demo_key_path = tests/mock_plugin/another_plugin.py
+http_req_wildcard_fields = query, otherfield
+paths = demo_key_path, request_handler_class
 tuples = http_req_wildcard_fields
 
 [test_dir_a]
 request_handler_class = tests/mock_plugin/another_plugin/AnotherHandler
-hq_url = tests/mock_plugin/temp_hq.py
-paths = request_handler_class,hq_url
+hq_url = http://someotherdomain.com
+paths = request_handler_class
 
 [test_dir_b]
-hq_url = tests/mock_plugin/another_plugin.py
-paths = hq_url
+hq_url = http://anotherdomain.com
+
