wildcarding and query param tests added

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = -v --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
+;addopts = -v --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
