plugin work and more cleanup

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,16 +1,17 @@
 [default]
-hq_url = http://somedomain.com
-request_handler_class = tests/app/MainHandler
-demo_key_path = tests/mock_plugin/another_plugin.py
+;todo this is not quite elegant. would need to repeat these two fields for each plugin
+plugin_url = http://somedomain.com
+plugin_entrypoint = tests.mock_plugin.entrypoint
+request_handler_class = tests.app.MainHandler
 http_req_wildcard_fields = query, otherfield
-paths = demo_key_path, request_handler_class
+paths = plugin_entrypoint, request_handler_class
 tuples = http_req_wildcard_fields
 
 [test_dir_a]
-request_handler_class = tests/mock_plugin/another_plugin/AnotherHandler
-hq_url = http://someotherdomain.com
+request_handler_class = tests.other_app.AnotherHandler
+plugin_url = http://someotherdomain.com
 paths = request_handler_class
 
 [test_dir_b]
-hq_url = http://anotherdomain.com
+plugin_url = http://anotherdomain.com
 
