--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -1,5 +1,5 @@
 [default]
-hq_url = http://somedomain.com
+plugin_url = http://somedomain.com
 request_handler_class = tests/app/MainHandler
 demo_key_path = tests/mock_plugin/another_plugin.py
 http_req_wildcard_fields = query, otherfield
@@ -7,7 +7,7 @@ paths = demo_key_path, request_handler_class
 tuples = http_req_wildcard_fields
 
 [config_test]
-request_handler_class = tests/mock_plugin/another_plugin/AnotherHandler
-hq_url = http://someotherdomain.com
+request_handler_class = tests.app.MainHandler
+plugin_url = http://someotherdomain.com
 paths = request_handler_class
 
