added default configs

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-; TODO need a way to make coverage only apply when invoking from CICD, and NOT within project as this prevents debugging!
-;addopts = -v --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
+addopts = -v --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
