--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,17 +1,26 @@
 [default]
-;todo this is not quite elegant. would need to repeat these two fields for each plugin
-plugin_url = http://somedomain.com
-plugin_entrypoint = tests.mock_plugin.entrypoint
+assert_no_missing_calls = false
+assert_no_extra_calls = false
 request_handler_class = tests.app.MainHandler
 http_req_wildcard_fields = query, otherfield
-paths = plugin_entrypoint, request_handler_class
+paths = request_handler_class
 tuples = http_req_wildcard_fields
+bools = assert_no_missing_calls, assert_no_extra_calls
+
+[plugin0]
+plugin0_url = http://somedomain.com
+plugin0_entrypoint = tests.mock_plugin.entrypoint
+paths = plugin0_entrypoint
+
+[plugin1]
+plugin1_url = http://autredomain.com
+plugin1_entrypoint = tests.mock_plugin.entrypoint
 
 [test_dir_a]
 request_handler_class = tests.other_app.AnotherHandler
-plugin_url = http://someotherdomain.com
+plugin0_url = http://someotherdomain.com
 paths = request_handler_class
 
 [test_dir_b]
-plugin_url = http://anotherdomain.com
+plugin0_url = http://anotherdomain.com
 
