--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -1,6 +1,6 @@
 [default]
 plugin_url = http://somedomain.com
-request_handler_class = tests/app/MainHandler
+request_handler_class = tests.app.MainHandler
 demo_key_path = tests/mock_plugin/another_plugin.py
 http_req_wildcard_fields = query, otherfield
 paths = demo_key_path, request_handler_class
