--- a/tests/config.ini
+++ b/tests/config.ini
@@ -2,25 +2,15 @@
 assert_no_missing_calls = false
 assert_no_extra_calls = false
 request_handler_class = tests.app.MainHandler
-http_req_wildcard_fields = query, otherfield
-paths = request_handler_class
+plugin0 = tests.mock_plugin.factories.MockPlugin
+http_req_wildcard_fields = query
+imports = request_handler_class, plugin0
 tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
 
-[plugin0]
-plugin0_url = http://somedomain.com
-plugin0_entrypoint = tests.mock_plugin.entrypoint
-paths = plugin0_entrypoint
-
-[plugin1]
-plugin1_url = http://autredomain.com
-plugin1_entrypoint = tests.mock_plugin.entrypoint
 
 [test_dir_a]
 request_handler_class = tests.other_app.AnotherHandler
-plugin0_url = http://someotherdomain.com
 paths = request_handler_class
 
-[test_dir_b]
-plugin0_url = http://anotherdomain.com
 
