fixed configparsing tests and bugs

--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -1,12 +1,12 @@
 [default]
-plugin_url = http://somedomain.com
 request_handler_class = tests.app.MainHandler
-demo_key_path = tests/mock_plugin/another_plugin.py
-http_req_wildcard_fields = query, otherfield
-paths = demo_key_path, request_handler_class
+http_req_wildcard_fields = query
+imports = request_handler_class
 tuples = http_req_wildcard_fields
 
 [config_test]
 request_handler_class = tests.app.MainHandler
-paths = request_handler_class
+http_req_wildcard_fields = otherfield
+imports = request_handler_class
+tuples = http_req_wildcard_fields
 
