redoing app.py and unit tests

--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -1,11 +1,11 @@
 [default]
-request_handler_class = tests.app.MainHandler
+request_handler_class = tests.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = query
 imports = request_handler_class
 tuples = http_req_wildcard_fields
 
 [config_test]
-request_handler_class = tests.app.MainHandler
+request_handler_class = tests.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = otherfield
 imports = request_handler_class
 tuples = http_req_wildcard_fields
