--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,7 +1,7 @@
 [default]
 assert_no_missing_calls = false
 assert_no_extra_calls = false
-request_handler_class = tests.app.MainHandler
+request_handler_class = tests.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.factories.MockPlugin
 http_req_wildcard_fields = query
 imports = request_handler_class, plugin0
@@ -9,8 +9,8 @@ tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
 
 
-[test_dir_a]
-request_handler_class = tests.other_app.AnotherHandler
+[test_mock_request]
+request_handler_class = tests.other_app.MockRequestTestHandler
 paths = request_handler_class
 
 
