--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,15 +3,7 @@
 
  name: pytest-factory
 
-on:
-  push:
-    branches: 
-      - master
-      - develop
-  pull_request:
-    branches:
-      - master
-      - develop
+on: [push, pull_request]
 
 jobs:
   build_and_test:
