--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,6 @@
 ; uncomment below to run with coverage in pycharm
 ;addopts = -s --random-order --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
 ; uncomment below to run in pycharm debugger
-addopts = -s --random-order --no-cov
+; addopts = -s --random-order --no-cov
 ; this is for CICD: DO NOT COMMIT WITH THIS COMMENTED!!!
-;addopts = -s --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
+addopts = -s --random-order --cov=pytest_factory --cov-branch --cov-report=term-missing --cov-report=html:test_reports/coverage --html=test_reports/Test_Report.html
