--- a/tests/config.ini
+++ b/tests/config.ini
@@ -3,8 +3,9 @@ assert_no_missing_calls = false
 assert_no_extra_calls = false
 request_handler_class = tests.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.factories.MockPlugin
+requests = pytest_factory.monkeypatch.requests
 http_req_wildcard_fields = query
-imports = request_handler_class, plugin0
+imports = request_handler_class, plugin0, requests
 tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
 
