--- a/tests/config.ini
+++ b/tests/config.ini
@@ -2,7 +2,7 @@
 assert_no_missing_calls = false
 assert_no_extra_calls = false
 request_handler_class = tests.passthru_app.PassthruTestHandler
-plugin0 = tests.mock_plugin.factories.MockPlugin
+plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 http_req_wildcard_fields = query
 imports = request_handler_class, plugin0, requests
