separating tornado dependencies

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -4,6 +4,7 @@ assert_no_extra_calls = false
 request_handler_class = tests.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
+tornado = pytest_factory.monkeypatch.tornado
 http_req_wildcard_fields = query
 imports = request_handler_class, plugin0, requests
 tuples = http_req_wildcard_fields
