fixed dir_name configs

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -13,6 +13,6 @@ bools = assert_no_missing_calls, assert_no_extra_calls
 
 [test_mock_request]
 request_handler_class = tests.other_app.MockRequestTestHandler
-paths = request_handler_class
+imports = request_handler_class
 
 
