improved exception handling for plugins

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -6,7 +6,7 @@ plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
 http_req_wildcard_fields = query
-imports = request_handler_class, plugin0, requests
+imports = request_handler_class, plugin0, requests, tornado
 tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
 
