--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@
 #    pip-compile
 #
 atomicwrites==1.4.0
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-factory (setup.py)
 attrs==21.4.0
     # via
     #   pytest
@@ -19,7 +21,9 @@ charset-normalizer==2.0.12
     #   pytest-factory (setup.py)
     #   requests
 colorama==0.4.4
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-factory (setup.py)
 idna==3.3
     # via
     #   pytest-factory (setup.py)
