--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest bandit
-        if [ -f dev_requirements.txt ]; then pip install -r dev_requirements.txt; fi
+        if [ -f requirements/dev.txt ]; then pip install -r requirements/dev.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
