adding support for env vars and strings in config.ini

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -5,9 +5,11 @@ request_handler_class = tests.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
+env_vars = {"TEST": "42"}
 http_req_wildcard_fields = query
 imports = request_handler_class, plugin0, requests, tornado
 tuples = http_req_wildcard_fields
+dicts = env_vars
 bools = assert_no_missing_calls, assert_no_extra_calls
 
 
