--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -3,6 +3,7 @@ assert_no_missing_calls = True
 assert_no_extra_calls = False
 request_handler_class = tests.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = query
+string_var = FOO
 imports = request_handler_class
 tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
@@ -10,6 +11,7 @@ bools = assert_no_missing_calls, assert_no_extra_calls
 [config_test]
 request_handler_class = tests.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = otherfield
+string_var = BAR
 imports = request_handler_class
 tuples = http_req_wildcard_fields
 
