--- a/tests/config.ini
+++ b/tests/config.ini
@@ -17,4 +17,7 @@ bools = assert_no_missing_calls, assert_no_extra_calls
 request_handler_class = tests.other_app.MockRequestTestHandler
 imports = request_handler_class
 
-
+[test_smtp]
+request_handler_class = tests.smtp_app.SmtpTestHandler
+smtplib = pytest_factory.monkeypatch.smtplib
+imports = request_handler_class, smtplib
