simplified loading configs

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,4 +1,4 @@
-[default]
+[tests]
 assert_no_missing_calls = false
 assert_no_extra_calls = false
 request_handler_class = tests.passthru_app.PassthruTestHandler
