--- a/tests/test_data/test_config.ini
+++ b/tests/test_data/test_config.ini
@@ -1,4 +1,4 @@
-[default]
+[tests]
 assert_no_missing_calls = True
 assert_no_extra_calls = False
 request_handler_class = tests.passthru_app.PassthruTestHandler
