--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,7 +1,7 @@
 [tests]
 assert_no_missing_calls = false
 assert_no_extra_calls = false
-request_handler_class = tests.passthru_app.PassthruTestHandler
+request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
@@ -13,14 +13,17 @@ dicts = env_vars
 bools = assert_no_missing_calls, assert_no_extra_calls
 
 [test_mock_request]
-request_handler_class = tests.other_app.MockRequestTestHandler
+request_handler_class = tests.test_mock_request.other_app.MockRequestTestHandler
 imports = request_handler_class
 
 [test_smtp]
-request_handler_class = tests.smtp_app.SmtpTestHandler
+request_handler_class = tests.test_smtp.smtp_app.SmtpTestHandler
 smtplib = pytest_factory.monkeypatch.smtplib
 imports = request_handler_class, smtplib
 
 [test_monkeypatch]
+request_handler_class = tests.test_monkeypatch.passthru_app.PassthruTestHandler
+aiohttp = pytest_factory.monkeypatch.aiohttp
 env_vars = {"TEST": "420"}
 dicts = env_vars
+imports = request_handler_class, aiohttp
