--- a/tests/test_configs/test_config.ini
+++ b/tests/test_configs/test_config.ini
@@ -8,7 +8,7 @@ imports = request_handler_class
 tuples = http_req_wildcard_fields
 bools = assert_no_missing_calls, assert_no_extra_calls
 
-[config_test]
+[test_configs]
 request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = otherfield
 string_var = BAR
