--- a/tests/config.ini
+++ b/tests/config.ini
@@ -7,10 +7,18 @@ requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
 env_vars = {"TEST": "42"}
 http_req_wildcard_fields = query
+string_var = FOO
 imports = request_handler_class, plugin0, requests, tornado
 tuples = http_req_wildcard_fields
 dicts = env_vars
 bools = assert_no_missing_calls, assert_no_extra_calls
+
+[test_configs]
+request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
+http_req_wildcard_fields = otherfield
+string_var = BAR
+imports = request_handler_class
+tuples = http_req_wildcard_fields
 
 [test_mock_request]
 request_handler_class = tests.test_mock_request.other_app.MockRequestTestHandler
@@ -24,6 +32,4 @@ imports = request_handler_class, smtplib
 [test_monkeypatch]
 request_handler_class = tests.test_monkeypatch.passthru_app.PassthruTestHandler
 aiohttp = pytest_factory.monkeypatch.aiohttp
-env_vars = {"TEST": "420"}
-dicts = env_vars
 imports = request_handler_class, aiohttp
