--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,6 +1,7 @@
 [tests]
 assert_no_missing_calls = false
 assert_no_extra_calls = false
+assert_reproduction_as_success = true
 request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
@@ -11,7 +12,7 @@ string_var = FOO
 imports = request_handler_class, plugin0, requests, tornado
 tuples = http_req_wildcard_fields
 dicts = env_vars
-bools = assert_no_missing_calls, assert_no_extra_calls
+bools = assert_no_missing_calls, assert_no_extra_calls, assert_reproduction_as_success
 
 [test_configs]
 request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
