--- a/tests/config.ini
+++ b/tests/config.ini
@@ -2,35 +2,35 @@
 assert_no_missing_calls = false
 assert_no_extra_calls = false
 assert_reproduction_as_success = true
-request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
+sut_callable = tests.test_http.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
 env_vars = {"TEST": "42"}
 http_req_wildcard_fields = query
 string_var = FOO
-imports = request_handler_class, plugin0, requests, tornado
+imports = sut_callable, plugin0, requests, tornado
 tuples = http_req_wildcard_fields
 dicts = env_vars
 bools = assert_no_missing_calls, assert_no_extra_calls, assert_reproduction_as_success
 
 [test_configs]
-request_handler_class = tests.test_http.passthru_app.PassthruTestHandler
+sut_callable = tests.test_http.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = otherfield
 string_var = BAR
-imports = request_handler_class
+imports = sut_callable
 tuples = http_req_wildcard_fields
 
 [test_mock_request]
-request_handler_class = tests.test_mock_request.other_app.MockRequestTestHandler
-imports = request_handler_class
+sut_callable = tests.test_mock_request.other_app.MockRequestTestHandler
+imports = sut_callable
 
 [test_smtp]
-request_handler_class = tests.test_smtp.smtp_app.SmtpTestHandler
+sut_callable = tests.test_smtp.smtp_app.SmtpTestHandler
 smtplib = pytest_factory.monkeypatch.smtplib
-imports = request_handler_class, smtplib
+imports = sut_callable, smtplib
 
 [test_monkeypatch]
-request_handler_class = tests.test_monkeypatch.passthru_app.PassthruTestHandler
+sut_callable = tests.test_monkeypatch.passthru_app.PassthruTestHandler
 aiohttp = pytest_factory.monkeypatch.aiohttp
-imports = request_handler_class, aiohttp
+imports = sut_callable, aiohttp
