WIP clean up and fixing bugs but configs/sut_callables are fucked still

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,19 +1,43 @@
+;this config.ini is read by the MALL when it opens.
+;it must be in your top-level test directory
+;its parent directory must be named "tests"
+;the first section should also be called "tests"
 [tests]
 assert_no_missing_calls = false
 assert_no_extra_calls = false
 assert_reproduction_as_success = true
+;name sut_callable is reserved and must be added to imports; string is the import path of the
+;Callable that returns an instance of the system-under-test
 sut_callable = tests.test_http.passthru_app.PassthruTestHandler
+;the value is for an example of a plugin. when the MALL opens and executes the imports defined in this file,
+;it checks to see if any are a pytest_factory.framework.base_types.BasePlugin sub-class. if so, the Store
+;for those tests in the applicable test module will be pre-stocked with the plugin
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
+;name env_vars is reserved: the value is a json string that will be parsed as a dict and at end of
+;pytest configuration, but BEFORE the imports, the dict will be used to monkeypatch the environment variables
+;this config CANNOT be overridden by sections outside of "tests"
 env_vars = {"TEST": "42"}
 http_req_wildcard_fields = query
+;if a configuration name is not added to any of the reserved configurations below, it is assumed to be a string
 string_var = FOO
+;name imports is reserved: the value is a comma-separated list of configuration names whose values
+;are import paths that will be imported and getattr'd as needed at the end of pytest configuration
+;and are retained by the MALL as properties to provide default configurations for each Store
 imports = sut_callable, plugin0, requests, tornado
+;name tuples is reserved: values are of type tuple
 tuples = http_req_wildcard_fields
+;name dicts is reserved: values are of type dict
 dicts = env_vars
+;name bools is reserved: values are of type bool
 bools = assert_no_missing_calls, assert_no_extra_calls, assert_reproduction_as_success
 
+
+;subsequent sections must match names of sibling directories
+;configurations defined in those sections
+;override configurations defined in "tests"
+;when requested for tests in those sibling directories
 [test_configs]
 sut_callable = tests.test_http.passthru_app.PassthruTestHandler
 http_req_wildcard_fields = otherfield
