--- a/tests/config.ini
+++ b/tests/config.ini
@@ -15,9 +15,8 @@ sut_callable = tests.test_http.passthru_app.PassthruTestHandler
 plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
-;name env_vars is reserved: the value is a json string that will be parsed as a dict and at end of
-;pytest configuration, but BEFORE the imports, the dict will be used to monkeypatch the environment variables
-;this config CANNOT be overridden by sections outside of "tests"
+;name env_vars is reserved: the value is a json string that will be parsed as a dict; at start of pytest
+;collection, but BEFORE the imports, the dict will be used to monkeypatch the environment variables
 env_vars = {"TEST": "42"}
 http_req_wildcard_fields = query
 ;if a configuration name is not added to any of the reserved configurations below, it is assumed to be a string
