--- a/tests/config.ini
+++ b/tests/config.ini
@@ -9,10 +9,6 @@ assert_reproduction_as_success = true
 ;name sut_callable is reserved and must be added to imports; string is the import path of the
 ;Callable that returns an instance of the system-under-test
 sut_callable = tests.test_http.passthru_app.PassthruTestHandler
-;the value is for an example of a plugin. when the MALL opens and executes the imports defined in this file,
-;it checks to see if any are a pytest_factory.framework.base_types.BasePlugin sub-class. if so, the Store
-;for those tests in the applicable test module will be pre-stocked with the plugin
-plugin0 = tests.mock_plugin.plugin.MockPlugin
 requests = pytest_factory.monkeypatch.requests
 tornado = pytest_factory.monkeypatch.tornado
 ;name env_vars is reserved: the value is a json string that will be parsed as a dict; at start of pytest
@@ -24,7 +20,7 @@ string_var = FOO
 ;name imports is reserved: the value is a comma-separated list of configuration names whose values
 ;are import paths that will be imported and getattr'd as needed at the end of pytest configuration
 ;and are retained by the MALL as properties to provide default configurations for each Store
-imports = sut_callable, plugin0, requests, tornado
+imports = sut_callable, requests, tornado
 ;name tuples is reserved: values are of type tuple
 tuples = http_req_wildcard_fields
 ;name dicts is reserved: values are of type dict
@@ -41,6 +37,16 @@ bools = assert_no_missing_calls, assert_no_extra_calls, assert_reproduction_as_s
 http_req_wildcard_fields = otherfield
 string_var = BAR
 tuples = http_req_wildcard_fields
+env_vars = {"TEST": "404"}
+dicts = env_vars
+
+[test_plugin]
+;the value is for an example of a plugin. when the MALL opens and executes the imports defined in this file,
+;it checks to see if any are a pytest_factory.framework.base_types.BasePlugin sub-class. if so, the Store
+;for those tests in the applicable test module will be pre-stocked with the plugin
+plugin0 = tests.test_plugin.mock_plugin.plugin.MockPlugin
+imports = plugin0
+
 
 [test_mock_request]
 sut_callable = tests.test_mock_request.other_app.MockRequestTestHandler
