WIP broke then fixed regressions but new tests failing

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -28,7 +28,6 @@ dicts = env_vars
 ;name bools is reserved: values are of type bool
 bools = assert_no_missing_calls, assert_no_extra_calls, assert_reproduction_as_success
 
-
 ;subsequent sections must match names of sibling directories
 ;configurations defined in those sections
 ;override configurations defined in "tests"
@@ -47,7 +46,6 @@ dicts = env_vars
 plugin0 = tests.test_plugin.mock_plugin.plugin.MockPlugin
 imports = plugin0
 
-
 [test_mock_request]
 sut_callable = tests.test_mock_request.other_app.MockRequestTestHandler
 imports = sut_callable
@@ -61,3 +59,12 @@ imports = sut_callable, smtplib
 sut_callable = tests.test_monkeypatch.passthru_app.PassthruTestHandler
 aiohttp = pytest_factory.monkeypatch.aiohttp
 imports = sut_callable, aiohttp
+
+[test_lifecycle]
+assert_no_missing_calls = true
+assert_no_extra_calls = true
+sut_callable = tests.test_lifecycle.app.InstrumentedHandler
+env_vars = {"accumulator_url": "https://staging.accumulator.local/accumulate"}
+imports = sut_callable
+dicts = env_vars
+bools = assert_no_missing_calls, assert_no_extra_calls
