--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest bandit
+        python -m pip install flake8 pytest bandit pip-tools
+        pip-compile requirements/dev.in
+        pip-compile requirements/main.in
         if [ -f requirements/dev.txt ]; then pip install -r requirements/dev.txt; fi
     - name: Lint with flake8
       run: |
